@@ -4,8 +4,10 @@ import com.quizmicroservice.dto.QuestionRequest;
 import com.quizmicroservice.model.Question;
 import com.quizmicroservice.service.QuestionService;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Positive;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
@@ -24,26 +26,48 @@ public class QuestionController {
 
     @GetMapping
     public ResponseEntity<List<Question>> getQuestions(
-            @RequestParam(required = false) String category
+            @RequestParam(required = false) String subject,
+            @RequestParam(required = false) String difficulty
     ) {
-        if (category == null || category.trim().isEmpty()) {
+        String subj = subject != null ? subject.trim() : null;
+        String diff = difficulty != null ? difficulty.trim() : null;
+
+        boolean hasSubject = subj != null && !subj.isBlank();
+        boolean hasDifficulty = diff != null && !diff.isBlank();
+
+        if (!hasSubject && !hasDifficulty) {
             return ResponseEntity.ok(questionService.getAllQuestions());
         }
 
+        if (hasDifficulty && !hasSubject) {
+            return ResponseEntity.badRequest().build();
+        }
+
+        if (hasSubject && !hasDifficulty) {
+            return ResponseEntity.ok(questionService.getQuestionsBySubject(subj));
+        }
+
         return ResponseEntity.ok(
-                questionService.getQuestionsByCategory(category.trim())
+                questionService.getQuestionsBySubjectAndDifficulty(subj, diff)
         );
     }
 
+    @PreAuthorize("hasRole('ADMIN')")
     @PostMapping
-    public ResponseEntity<String> addQuestion(@Valid @RequestBody QuestionRequest request) {
+    public ResponseEntity<String> addQuestion(
+            @Valid @RequestBody QuestionRequest request
+    ) {
         questionService.addQuestion(request);
-        return ResponseEntity.status(HttpStatus.CREATED)
+        return ResponseEntity
+                .status(HttpStatus.CREATED)
                 .body("Question added successfully.");
     }
 
+    @PreAuthorize("hasRole('ADMIN')")
     @DeleteMapping("/{id}")
-    public ResponseEntity<String> deleteQuestion(@PathVariable int id) {
+    public ResponseEntity<String> deleteQuestion(
+            @PathVariable @Positive(message = "Question id must be positive.") Integer id
+    ) {
         questionService.deleteQuestion(id);
         return ResponseEntity.ok("Question deleted successfully.");
     }
